# dtm-download

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  package-lock.json  package.json  telemetry-id
.github/workflows/: publish-ghcr.yml
docs/: OntarioDTM_LidarDerived_DataPackageLinks.docx
docs/plans/: 2026-02-13-convert-to-web-app.md
src/: App.css  App.tsx
src-server/: Cargo.toml
src-server/src/: api_types.rs  download.rs  lib.rs  main.rs  package_client.rs  processing.rs  routes.rs
src/types/: index.ts
src/utils/: projectSelection.test.ts  projectSelection.ts
